Add EPUB generator

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,5 +2,12 @@
   "Paths": {
     "Input": "",
     "Output": ""
+  },
+  "EPUB": {
+    "Filename":  "",
+    "Name": "",
+    "Author": "",
+    "Language": "",
+    "BookId": ""
   }
 }
