--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,11 @@
 {
-  "Paths": {
-    "Input": "",
-    "Output": ""
+  "InputPath": "",
+
+  "Website": {
+    "Output": "",
+    "Stylesheet": ""
   },
+
   "EPUB": {
     "Filename":  "",
     "Name": "",
