Add option to disable generating html or epub

--- a/appsettings.json
+++ b/appsettings.json
@@ -2,11 +2,13 @@
   "InputPath": "",
 
   "Website": {
+    "Enabled": true,
     "Output": "",
     "Stylesheet": ""
   },
 
   "EPUB": {
+    "Enabled": true,
     "Filename": "",
     "Name": "",
     "Author": "",
