Use separate paths for the various types of content

--- a/Recipes/appsettings.json
+++ b/Recipes/appsettings.json
@@ -1,5 +1,9 @@
 {
-  "InputPath": "",
+  "InputPaths": {
+    "Recipes": "",
+    "Documents": "",
+    "WebFiles": ""
+  },
 
   "Website": {
     "Enabled": true,
