Use HandleBars template to generate the recipe html

--- a/Recipes/appsettings.json
+++ b/Recipes/appsettings.json
@@ -8,7 +8,13 @@
   "Website": {
     "Enabled": true,
     "Output": "",
-    "Stylesheet": ""
+    "Stylesheet": "",
+    "Templates": {
+      "Start": "",
+      "Recipes": "",
+      "Documents": "",
+      "Keywords": ""
+    }
   },
 
   "EPUB": {
