By default don't generate anything

--- a/Recipes/appsettings.json
+++ b/Recipes/appsettings.json
@@ -6,7 +6,7 @@
   },
 
   "Website": {
-    "Enabled": true,
+    "Enabled": false,
     "Output": "",
     "Stylesheet": "",
     "Templates": {
@@ -18,7 +18,7 @@
   },
 
   "EPUB": {
-    "Enabled": true,
+    "Enabled": false,
     "Filename": "",
     "Name": "",
     "Author": "",
