Move Name, Author and Language from EPUB to General

--- a/Recipes/appsettings.json
+++ b/Recipes/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "General": {
+    "Name": "",
+    "Author": "",
+    "Language": ""
+  },
+
   "InputPaths": {
     "Recipes": "",
     "Documents": "",
@@ -20,9 +26,6 @@
   "EPUB": {
     "Enabled": false,
     "Filename": "",
-    "Name": "",
-    "Author": "",
-    "Language": "",
     "BookId": ""
   }
 }
