Start of a major rewrite of the HTML generator

--- a/Recipes/appsettings.json
+++ b/Recipes/appsettings.json
@@ -16,10 +16,10 @@
     "Output": "",
     "Stylesheet": "",
     "Templates": {
-      "Start": "",
-      "Recipes": "",
-      "Documents": "",
-      "Keywords": ""
+      "Base": "",
+      "Partials": {
+        "Recipes": ""
+      }
     }
   },
 
