More improvements to the HTML generator

--- a/Recipes/appsettings.json
+++ b/Recipes/appsettings.json
@@ -7,14 +7,13 @@
 
   "InputPaths": {
     "Recipes": "",
-    "Documents": "",
-    "WebFiles": ""
+    "Documents": ""
   },
 
   "Website": {
     "Enabled": false,
     "Output": "",
-    "Stylesheet": "",
+    "WebFiles": "",
     "Templates": {
       "Base": "",
       "Partials": {
